Fixed feedback form input field visibility.

--- a/client/src/Components/local/molecules/insight-form/styles.module.scss
+++ b/client/src/Components/local/molecules/insight-form/styles.module.scss
@@ -3,6 +3,7 @@
 .insight-form {
   @include typo-primary;
   max-width: 500px;
+  background: #1a394d;
   padding: 20px;
 
   svg {
